--- a/client/formular.css
+++ b/client/formular.css
@@ -1,22 +1,52 @@
+:root{
+    font-family: 'Open Sans', sans-serif;
+}
+
+html, body{
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
 h2 {
     grid-column: 1/3;
 }
 
-#formular {
-    padding: 1ch;
+#formularSignIn, #formularSignUp {
+    visibility: hidden;
+   /* padding: 1ch;*/
     font-size: 20px;
-    width: 30%;
-    display: grid;
+    display: none;
     /* row-gap: 1ch; */
-    grid-template-columns: auto auto;
-    margin: auto;
-    border: 1px solid black;
-    align-items: center;
     text-align: center;
-    padding-bottom: 10px;
+    color: white;
+    /*padding-bottom: 10px;*/
+    position: sticky;
+    top: 0;
+    bottom: 0;
+}
+
+#form-signup-btn{
+    display: flex;
+    flex-flow: row nowrap;
+    width: 40%;
+}
+
+#form-signup-wrapper{
+    display: grid;
+    grid-column: 1/3;
+    place-items: center;
+    width: 100%;
+}
+
+#navbar{
+    display: flex;
+    width: 100%;
 }
 
 input {
+    width: 75%;
     height: 20px;
     border: 1px solid black;
     outline: none;
@@ -29,6 +59,7 @@ label {
 }
 
 button {
+    border-radius: 5px;
     text-decoration: none;
     font-size: 17px;
     border: 1px solid black;
