--- a/client/formular.css
+++ b/client/formular.css
@@ -4,7 +4,6 @@
 
 html, body{
     height: 100%;
-    width: 100%;
     margin: 0;
     padding: 0;
 }
@@ -15,29 +14,20 @@ h2 {
 
 #formularSignIn, #formularSignUp {
     visibility: hidden;
-   /* padding: 1ch;*/
     font-size: 20px;
     display: none;
-    /* row-gap: 1ch; */
     text-align: center;
     color: white;
-    /*padding-bottom: 10px;*/
     position: sticky;
     top: 0;
     bottom: 0;
 }
 
-#form-signup-btn{
+#form-signin-btn, #form-signup-btn{
     display: flex;
-    flex-flow: row nowrap;
-    width: 40%;
-}
-
-#form-signup-wrapper{
-    display: grid;
     grid-column: 1/3;
-    place-items: center;
-    width: 100%;
+    width: 50%;
+    margin: auto;
 }
 
 #navbar{
@@ -46,7 +36,7 @@ h2 {
 }
 
 input {
-    width: 75%;
+    width: 70%;
     height: 20px;
     border: 1px solid black;
     outline: none;
@@ -54,7 +44,7 @@ input {
 }
 
 label {
-    font-size: 20px;
+    font-size: 17px;
     align-self: center;
 }
 
