--- a/client/formular.css
+++ b/client/formular.css
@@ -8,6 +8,10 @@ html, body{
     padding: 0;
 }
 
+#log-out{
+    display: none;
+}
+
 h2 {
     grid-column: 1/3;
 }
@@ -48,7 +52,7 @@ label {
     align-self: center;
 }
 
-button {
+button{
     border-radius: 5px;
     text-decoration: none;
     font-size: 17px;
