--- a/client/formular.css
+++ b/client/formular.css
@@ -37,6 +37,8 @@ h2 {
 #navbar{
     display: flex;
     width: 100%;
+    height: minmax(3%, auto);
+    background-color: #e6f2ff;
 }
 
 input {
@@ -82,10 +84,12 @@ button:hover {
 {
     margin: 0;
     display: flex;
-    height: 100vh;
+    height: 97%;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
-#groups{
+#groups {
     background-color: #8080ff;
     width: 20%;
 }
@@ -117,6 +121,16 @@ button:hover {
     margin-bottom: 20px;
 }
 
+#SendSection {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+}
+
+#SendSection > input {
+    width: 90%;
+}
+
 #sent
 {
     margin-left: auto;
@@ -124,15 +138,20 @@ button:hover {
 
 input
 {
-    width: 50%;
+    width: 88%;
     border: 2px solid black;
     margin: 10px;
     padding: 5px;
     outline: none;
 }
 
-svg
-{
-    width: 30px;
-    height: 30px;
+#btn-send {
+    width: 40px;
+    height: 40px;
+    background-color: #e6f2ff;
+    border: none;
+}
+
+#btn-send:hover {
+    background-color: lightgray;
 }
