--- a/client/formular.css
+++ b/client/formular.css
@@ -27,7 +27,7 @@ h2 {
     bottom: 0;
 }
 
-#form-signin-btn, #form-signup-btn{
+#form-signin-btn, #form-signup-btn {
     display: flex;
     grid-column: 1/3;
     width: 50%;
@@ -54,7 +54,7 @@ label {
     align-self: center;
 }
 
-button{
+button {
     border-radius: 5px;
     text-decoration: none;
     font-size: 17px;
@@ -101,24 +101,37 @@ button:hover {
     flex-direction: column;
     justify-content: flex-end;
     flex: 1;
+    height: 100%;
 }
 
 #AllMessages
 {
     padding: 0 4%;
+    padding-top: 2%;
     overflow-y: scroll;
     max-height: calc(100% - 50px);
+    display: flex;
+    flex-flow: column nowrap;
+    height: 100%;
 }
 
 #AllMessages > div
 {
-    max-width: 70%;
-    width: fit-content;
+    width: auto;
     padding: 5px;
     border-radius: 10px;
     text-align: justify;
     background-color: lightgray;
     margin-bottom: 20px;
+}
+
+#AllMessages .message-others {
+    margin-right: auto;
+    background-color: #8080ff;
+}
+
+#AllMessages .message-mine {
+    margin-left: auto;
 }
 
 #SendSection {
@@ -129,11 +142,6 @@ button:hover {
 
 #SendSection > input {
     width: 90%;
-}
-
-#sent
-{
-    margin-left: auto;
 }
 
 input
