--- a/client/chat.css
+++ b/client/chat.css
@@ -27,8 +27,13 @@ body {
                 width: 100%;
                 display: block;
                 text-align: center;
-                padding: .2rem;
-                margin: auto;}
+                padding: .3rem;
+                margin: auto;
+                cursor: pointer;}
+            #contacts button:hover {
+                background-color: lightgray;
+                opacity: 0.5;
+                transition: all 0.1s linear;}
         #right {
             display: flex;
             flex-direction: column;
@@ -50,12 +55,14 @@ body {
                     height: 2rem;
                     margin-bottom: 0.5rem;
                     margin-left: 0.5rem;
+                    padding-left: 5px;
                     flex: 1;
                     border: 1px solid black;}
                 #writeArea button {
                     cursor: pointer;}
                 #writeArea svg {
                     display: block;
+                    margin-bottom: 0.5rem;
                     width: 2.0rem;
                     padding: .2rem;}
 
@@ -75,8 +82,14 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;}
+#menu > div > b {
+    padding-left: 5px;}
 #menu button {
     cursor: pointer;}
 #menu svg {
     width: 1.5rem;
     height: 1.5rem;}
+#menu button:hover,
+#right button:hover {
+    opacity: 0.5;
+    transition: all 0.1s linear;}
