--- a/client/chat.css
+++ b/client/chat.css
@@ -1,6 +1,6 @@
 :root {
     font-size: 20px;
-    --background: white;
+    --background: rgba(3, 182, 252, .2);
     --sent-message-color: darkgray;
     --received-message-color: lightgray;
 }
