--- a/client/formular.css
+++ b/client/formular.css
@@ -6,44 +6,43 @@
     --received-message-color: lightgray;
 }
 
-* {
-    padding: 0;
+html, body{
+    height: 100%;
     margin: 0;
-    border: 0;
+    padding: 0;
 }
 
-body{
-    height: 100vh;
-    width: 100vw;
+#log-out{
+    display: none;
 }
 
-nav {
-    font-size: 50px;
-    position: absolute;
-    top: 50vh;
-    left: 50vw;
-    transform: translate(-50%, -50%);
-}
-
-button {
-    font-size: 1em;
-    background-color: transparent;
-    padding: .2em;
-    border-radius: 5px;
-    transition-property: background-color, color;
-    transition-duration: 1s;
+h2 {
+    grid-column: 1/3;
 }
 
 #formularSignIn, #formularSignUp {
-    box-sizing: border-box;
-    padding: 10%;
-    display: grid;
-    grid-template-columns: auto auto;
+    visibility: hidden;
     font-size: 20px;
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    background-color: aliceblue;
+    display: none;
+    text-align: center;
+    color: white;
+    position: sticky;
+    top: 0;
+    bottom: 0;
+}
+
+#form-signin-btn, #form-signup-btn {
+    display: flex;
+    grid-column: 1/3;
+    width: 50%;
+    margin: auto;
+}
+
+#navbar{
+    display: flex;
+    width: 100%;
+    height: minmax(3%, auto);
+    background-color: #e6f2ff;
 }
 
 input {
@@ -55,34 +54,120 @@ input {
 }
 
 label {
-    margin: auto;
+    font-size: 17px;
+    align-self: center;
 }
 
-h2 {
+button {
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 17px;
+    border: 1px solid black;
     grid-column: 1/3;
-    text-align: center;
+    width: 75%;
+    margin: auto;
+    transition-property: all;
+    transition-duration: .4s;
 }
 
 p {
     grid-column: 2;
+    margin: 0 auto 0;
+    font-size: 17px;
     color: red;
-    text-align: center;
-    /* visibility: hidden; */
+    visibility: hidden;
 }
 
 button:hover {
     background-color: gray;
     color: white;
+    border-radius: 5px;
 }
 
-.buttons {
-    grid-column: 1/3;
-    margin: auto;
+#chat-body
+{
+    margin: 0;
+    display: flex;
+    height: 97%;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
-input {
-    display: block;
-    margin: auto;
-    border: 1px solid black;
+#groups {
+    background-color: #8080ff;
+    width: 20%;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: start;
+    align-items: center;
+}
+
+.conversation
+{
+    background-color: #e6f2ff;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    flex: 1;
+    height: 100%;
+}
+
+#AllMessages
+{
+    padding: 0 4%;
+    padding-top: 2%;
+    overflow-y: scroll;
+    max-height: calc(100% - 50px);
+    display: flex;
+    flex-flow: column nowrap;
+    height: 100%;
+}
+
+#AllMessages > div
+{
+    width: auto;
+    padding: 5px;
+    border-radius: 10px;
+    text-align: justify;
+    background-color: lightgray;
+    margin-bottom: 20px;
+}
+
+#AllMessages .message-others {
+    margin-right: auto;
+    background-color: #8080ff;
+}
+
+#AllMessages .message-mine {
+    margin-left: auto;
+}
+
+#SendSection {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: center;
+}
+
+#SendSection > input {
+    width: 90%;
+}
+
+input
+{
+    width: 88%;
+    border: 2px solid black;
+    margin: 10px;
+    padding: 5px;
     outline: none;
+}
+
+#btn-send {
+    width: 40px;
+    height: 40px;
+    background-color: #e6f2ff;
+    border: none;
+}
+
+#btn-send:hover {
+    background-color: lightgray;
 }
