--- a/client/formular.css
+++ b/client/formular.css
@@ -37,7 +37,7 @@ button {
 #formularSignIn, #formularSignUp {
     box-sizing: border-box;
     padding: 10%;
-    display: grid;
+    display: none;
     grid-template-columns: auto auto;
     font-size: 20px;
     position: absolute;
@@ -67,7 +67,6 @@ p {
     grid-column: 2;
     color: red;
     text-align: center;
-    /* visibility: hidden; */
 }
 
 button:hover {
